--- a/ECoG_motor_imagery_Xianhui.ipynb
+++ b/ECoG_motor_imagery_Xianhui.ipynb
@@ -216,11 +216,11 @@
         "  V = dat['V'].astype('float32')\n",
         "  V = V[:, ele_used]\n",
         "\n",
-        "  # high-pass filter below 200 Hz\n",
+        "  # low-pass filter below 200 Hz\n",
         "  b, a = signal.butter(3, [200], btype='low', fs=1000)\n",
         "  V = signal.filtfilt(b, a, V, 0)\n",
         "\n",
-        "  # low-pass filter above 1 Hz\n",
+        "  # high-pass filter above 1 Hz\n",
         "  b, a = signal.butter(3, [1], btype='high', fs=1000)\n",
         "  V = signal.filtfilt(b, a, V, 0)\n",
         "\n",
