--- a/analysis_code/TFA_Hanif_Xianhui.ipynb
+++ b/analysis_code/TFA_Hanif_Xianhui.ipynb
@@ -3,9 +3,10 @@
   "nbformat_minor": 0,
   "metadata": {
     "colab": {
-      "name": "time_frequency_analysis_Xianhui",
+      "name": "TFA_Hanif_Xianhui",
       "provenance": [],
-      "collapsed_sections": []
+      "collapsed_sections": [],
+      "include_colab_link": true
     },
     "kernelspec": {
       "name": "python3",
@@ -16,6 +17,25 @@
     }
   },
   "cells": [
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "view-in-github",
+        "colab_type": "text"
+      },
+      "source": [
+        "<a href=\"https://colab.research.google.com/github/Xianhui-He/Raclette-Group-2-ECoG-Motor-Imagery/blob/main/analysis_code/TFA_Hanif_Xianhui.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "# Dataset Preprocessing"
+      ],
+      "metadata": {
+        "id": "MA6Gc9AbS81U"
+      }
+    },
     {
       "cell_type": "code",
       "source": [
@@ -41,7 +61,7 @@
       "metadata": {
         "id": "78yWg6jAFg5O"
       },
-      "execution_count": 1,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -58,7 +78,7 @@
         },
         "outputId": "70e89604-ebc9-4a54-dcae-74d1d2d1e631"
       },
-      "execution_count": 2,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -72,7 +92,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 18,
+      "execution_count": null,
       "metadata": {
         "id": "WOOcJLiJEBm3"
       },
@@ -106,7 +126,7 @@
       "metadata": {
         "id": "8EAtvaoCHU9L"
       },
-      "execution_count": 4,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -139,7 +159,7 @@
         },
         "outputId": "d7bc2620-9bfd-44df-9675-8ca34ea7a869"
       },
-      "execution_count": 5,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -183,7 +203,7 @@
         "id": "fCyx8Oo3SOM0",
         "outputId": "831c7875-529d-4eb9-d86b-020811b8135e"
       },
-      "execution_count": 6,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -289,7 +309,7 @@
         },
         "outputId": "82f1eb58-eab4-40aa-971e-ab114476051c"
       },
-      "execution_count": 13,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -325,7 +345,7 @@
         "id": "4s9ncIF7bqs8",
         "outputId": "7b003112-1043-4084-f6ec-523baeb090c2"
       },
-      "execution_count": 8,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -398,7 +418,7 @@
         "id": "AvCF4xKibvqg",
         "outputId": "fb13af6c-2812-4dda-f9fa-2264d36e7eb5"
       },
-      "execution_count": 24,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -447,7 +467,7 @@
         "id": "7whEvZwVkrFv",
         "outputId": "e5ad281e-a7db-4af7-a3de-6729a8915885"
       },
-      "execution_count": 25,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
